--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.7",
+    "angular-aria": "^1.5.7",
+    "angular-material": "^1.1.0-rc.5",
     "angular-ui-router": "^0.2.15",
+    "ngmap": "^1.17.1",
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
